--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="grid">
-            <h1 class="title">{{ page.tagline }} <small>{{ page.date | date: '%d/%m/%Y'}}</small></h1>
+            <h1 class="title">{{ page.tagline }}</h1>
 
             <ul class="unstyled">
                 <li><i class="icon-building"></i> {{ page.client }}</li>
