--- a/css/style.css
+++ b/css/style.css
@@ -1619,7 +1619,8 @@ header nav {
       height: 300px; } }
   @media screen and (max-width: 480px) {
     .tagline {
-      height: 200px; } }
+      background: none;
+      height: 0; } }
 
 h1, h2, h3, h4 h5, h6 {
   font-weight: 400; }
@@ -1629,15 +1630,12 @@ h1 {
   font-size: 2.5em;
   line-height: 60px;
   margin: 0.5em 0 0 0; }
-  h1 small {
+  h1 + p {
     color: #c9c5c5;
     font-family: Lato, sans-serif;
-    font-size: 0.4em;
+    font-size: 0.8em;
+    margin-top: 0;
     font-weight: normal; }
-    @media screen and (max-width: 767px) {
-      h1 small {
-        display: block;
-        line-height: 24px; } }
 
 h2 {
   border-bottom: 1px solid #d5d2d2;
@@ -1774,7 +1772,8 @@ footer {
 .pagination {
   list-style-type: none;
   overflow: hidden;
-  padding-left: 0; }
+  padding-left: 0;
+  margin: 60px 0 0 0; }
   .pagination .prev a {
     float: left; }
     @media screen and (max-width: 767px) {
