--- a/sass/style.scss
+++ b/sass/style.scss
@@ -223,7 +223,8 @@ header {
     }
 
     @include media(max-width 480px) {
-        height: 200px;
+        background: none;
+        height: 0;
     }
 }
 
@@ -237,16 +238,13 @@ h1 {
     line-height: 60px;
     margin: 0.5em 0 0 0;
     
-    small {
+
+    & + p {
         color: darken($lightGrey, 15%);
         font-family: Lato, sans-serif;
-        font-size: 0.4em;
+        font-size: 0.8em;
+        margin-top: 0;
         font-weight: normal;
-        
-        @include media(max-width 767px) {
-            display: block;
-            line-height: 24px;
-        }
     }
 }
 
@@ -391,6 +389,7 @@ footer {
     list-style-type: none;
     overflow: hidden;
     padding-left: 0;    
+    margin: 60px 0 0 0;
 
     .prev a {
         @extend .btn;
