--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,5 +26,6 @@
     </div>
 </header>
 
-<div class="tagline" style="background-image: url(/img/background_{% if page.image %}{{page.image}}{% else %}{{page.category}}{% endif %}.jpg);"></div>
+<div class="tagline tagline-{% if page.image %}{{page.image}}{% else %}{{page.category}}{% endif %}"></div>
+
 {{post.category}}
