--- a/sass/_prettify.scss
+++ b/sass/_prettify.scss
@@ -14,6 +14,7 @@
        -moz-border-radius: 2px;
             border-radius: 2px;
     font-size: 0.9em;
+    overflow: auto;
     padding: 8px;
   
     &.linenums {
