mise à jour du 18 aout 2013
maj des layouts
maj du design
ajout page credits

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     {% include header.html %}
     
     <div class="container">
-        <div class="grid">
+        <div class="grid12">
             <h1 class="title">{{ page.tagline }}</h1>
             
             {{ content }} 
