--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,9 +19,12 @@
     {% include header.html %}
 
     <div class="container">
-        <div class="grid">
+        <div class="grid12">
             <h1 class="title">{{ page.tagline }}</h1>
-            <p class="subtitle">{{ page.date | date: '%d/%m/%Y'}} &dash; {% if page.author%} {{ page.author}} {% else %} Pierre Baron {% endif %}</p>
+            <ul class="unstyled subtitle">
+                <li><i class="icon-calendar"></i> {{ page.date | date: '%d/%m/%Y'}}</li> 
+                <li><i class="icon-user"></i> {% if page.author%} {{ page.author}} {% else %} Pierre Baron {% endif %}</li>
+            </ul>
             
             {{ content }}
             
