--- a/css/style.css
+++ b/css/style.css
@@ -1428,7 +1428,7 @@ a .icon-rotate-90:before, a .icon-rotate-180:before, a .icon-rotate-270:before, 
 
 body {
   background: #fefefe;
-  color: #a49d9d;
+  color: #a5adb7;
   font-family: Lato, 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -1437,12 +1437,12 @@ body {
   padding: 0; }
 
 a {
-  border-bottom: 1px solid #00a6d4;
-  color: #00a6d4;
+  border-bottom: 1px solid #4fc1e9;
+  color: #4fc1e9;
   text-decoration: none; }
   a:hover, a:active {
-    border-bottom-color: #006a88;
-    color: #006a88; }
+    border-bottom-color: #3bafda;
+    color: #1790bb; }
 
 header,
 section {
@@ -1471,13 +1471,49 @@ section {
     .container {
       padding: 0 1em; } }
 
-.grid {
+.grid12 {
   display: block;
   float: left;
   margin-right: 2.35765%;
   width: 100%; }
-  .grid:last-child {
+  .grid12:last-child {
     margin-right: 0; }
+
+.grid9 {
+  display: block;
+  float: left;
+  margin-right: 2.35765%;
+  width: 74.41059%;
+  margin-right: 2.35765%; }
+  .grid9:last-child {
+    margin-right: 0; }
+  @media screen and (max-width: 480px) {
+    .grid9 {
+      display: block;
+      float: left;
+      margin-right: 2.35765%;
+      width: 100%; }
+      .grid9:last-child {
+        margin-right: 0; } }
+
+.grid3 {
+  display: block;
+  float: left;
+  margin-right: 2.35765%;
+  width: 23.23176%;
+  float: right;
+  margin-right: 0; }
+  .grid3:last-child {
+    margin-right: 0; }
+  @media screen and (max-width: 480px) {
+    .grid3 {
+      float: none;
+      display: block;
+      float: left;
+      margin-right: 2.35765%;
+      width: 100%; }
+      .grid3:last-child {
+        margin-right: 0; } }
 
 header .logo {
   background: url(/img/logo.png) center left no-repeat;
@@ -1523,50 +1559,21 @@ header .socials {
     margin-right: 1em;
     text-align: center; }
   header .socials a {
-    -webkit-transition: background 0.2s ease-in-out;
-    -moz-transition: background 0.2s ease-in-out;
-    transition: background 0.2s ease-in-out;
-    background: #d9d9d9;
-    border-bottom: none;
+    border: 3px solid #c1c7ce;
     border-radius: 25em;
-    color: #fefefe;
+    color: #c1c7ce;
     display: block;
+    height: 40px;
+    line-height: 18px;
     padding: 0.5em;
     position: relative;
-    width: 40px; }
+    width: 40px;
+    -webkit-transition: background 0.2s;
+    -moz-transition: background 0.2s;
+    transition: background 0.2s; }
     header .socials a:hover {
-      background: #232d31;
-      border-bottom: none; }
-    header .socials a:after {
-      pointer-events: none;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      content: '';
-      -webkit-box-sizing: content-box;
-      -moz-box-sizing: content-box;
-      box-sizing: content-box;
-      top: -3px;
-      left: -3px;
-      padding: 3px;
-      box-shadow: 0 0 0 4px #232d31;
-      -webkit-transition: opacity 0.2s, background 0.2s;
-      -moz-transition: opacity 0.2s, background 0.2s;
-      transition: opacity 0.2s, background 0.2s;
-      -webkit-transform: scale(0.8);
-      -moz-transform: scale(0.8);
-      -ms-transform: scale(0.8);
-      -o-transform: scale(0.8);
-      transform: scale(0.8);
-      opacity: 0; }
-    header .socials a:hover:after {
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1);
-      opacity: 1; }
+      background: #c1c7ce;
+      color: #fefefe; }
 header nav {
   *zoom: 1;
   display: block;
@@ -1593,13 +1600,13 @@ header nav {
     list-style: none; }
     header nav li a {
       border-bottom: none;
-      color: #767676;
+      color: #656d78;
       font-family: Lato, sans-serif;
       padding: 17px 10px 19px 10px;
       text-decoration: none; }
       header nav li a:hover, header nav li a:active {
-        background: #00a6d4;
-        border-top: 3px solid #00566e;
+        background: #4fc1e9;
+        border-top: 3px solid #1790bb;
         border-bottom: none;
         color: #fff; }
       @media screen and (max-width: 479px) {
@@ -1607,9 +1614,9 @@ header nav {
           font-size: 0.8em;
           padding: 20px 10px 21px 10px; } }
     header nav li.active a {
-      color: #00a6d4; }
+      color: #4fc1e9; }
       header nav li.active a:hover {
-        color: #00566e; }
+        color: #1790bb; }
   header nav li:last-of-type {
     margin-right: 0; }
 
@@ -1626,6 +1633,8 @@ header nav {
     background-image: url(/img/background_works.jpg); }
   .tagline.tagline-blog {
     background-image: url(/img/background_blog.jpg); }
+  .tagline.tagline-credits {
+    background-image: url(/img/background_credits.jpg); }
   @media screen and (min-width: 481px) and (max-width: 768px) {
     .tagline {
       height: 300px; } }
@@ -1642,29 +1651,23 @@ h1 {
   font-size: 2.5em;
   line-height: 60px;
   margin: 0.5em 0 0 0; }
-  h1 + p.subtitle {
-    color: #c9c5c5;
-    font-family: Lato, sans-serif;
-    font-size: 0.8em;
-    margin-top: 0;
-    font-weight: normal; }
 
 h2 {
-  border-bottom: 1px solid #d5d2d2;
-  color: #504949;
+  border-bottom: 1px solid #a5adb7;
+  color: #22272b;
   font-size: 1.5em;
   padding-bottom: 8px;
   margin: 32px 0 16px; }
   h2 a {
-    color: #3d3838; }
+    color: #131517; }
   h2 small {
-    color: #b1aaaa;
+    color: #7a8796;
     font-family: Lato, sans-serif;
     font-size: 0.6em;
     font-weight: normal; }
 
 h3 {
-  color: #6a6262;
+  color: #667281;
   font-family: Kreon, Lato, sans-serif;
   font-size: 1.25em;
   margin: 16px 0 0; }
@@ -1722,6 +1725,31 @@ h4 {
         .projects .project:nth-child(2n+1) {
           clear: left; } }
 
+.project-info i {
+  display: inline-block;
+  text-align: right;
+  width: 20px; }
+
+.post {
+  margin-bottom: 60px; }
+  .post:last-of-type {
+    margin-bottom: 0; }
+
+.subtitle {
+  color: #aab2bd;
+  font-family: Lato, sans-serif;
+  font-size: 0.8em;
+  margin-top: 0;
+  font-weight: normal; }
+  .subtitle li {
+    border-right: 1px solid #e1e1e1;
+    display: inline-block;
+    padding: 0 10px; }
+  .subtitle li:first-child {
+    padding-left: 0; }
+  .subtitle li:last-child {
+    border: none; }
+
 footer {
   *zoom: 1;
   display: table;
@@ -1771,14 +1799,14 @@ footer {
 
 .btn, .pagination .prev a, .pagination .next a {
   border-radius: 2px;
-  background: #00a6d4;
-  border: 1px solid #0092bb;
+  background: #4fc1e9;
+  border: 1px solid #38b9e6;
   color: #fff;
   padding: 10px 20px;
   text-decoration: none; }
   .btn:hover, .pagination .prev a:hover, .pagination .next a:hover {
-    border: 1px solid #00566e;
-    background: #006a88;
+    border: 1px solid #1790bb;
+    background: #1aa2d1;
     color: #fff; }
   .btn:active, .pagination .prev a:active, .pagination .next a:active {
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2) inset, 0 0 10px rgba(0, 0, 0, 0.5) inset;
