--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="post">
     {% include header.html %}
 
     <div class="container">
@@ -30,13 +30,13 @@
             {{ content }}
             
             <ul class="pagination">
-                {% for post in site.categories.work %}
+                {% for post in site.categories.works %}
                     {% if post.url == page.url %}
                         {% assign post_index0 = forloop.index0 %}
                         {% assign post_index1 = forloop.index %}
                     {% endif %}
                 {% endfor %}
-                {% for post in site.categories.work %}
+                {% for post in site.categories.works %}
                     {% if post_index0 == forloop.index %}
                         {% assign next_post = post %}
                     {% endif %}
@@ -46,11 +46,11 @@
                 {% endfor %}
                 
                 {% if next_post %}
-                    <li class="next"><a href=" {{ next_post.url }}">{{ next_post.tagline }} &nbsp;&nbsp;<i class="icon-chevron-sign-right"></i></a></li>
-                {% endif %} 
-                
+                    <li class="next"><a href=" {{ next_post.url }}"><i class="icon-chevron-sign-left"></i> &nbsp;&nbsp; {{ next_post.tagline }}</a></li>
+                {% endif %}
+
                 {% if prev_post %}
-                    <li class="prev"><a href=" {{ prev_post.url }}"><i class="icon-chevron-sign-left"></i> &nbsp;&nbsp; {{ prev_post.tagline }}</a></li>
+                    <li class="prev"><a href=" {{ prev_post.url }}">{{ prev_post.tagline }} &nbsp;&nbsp;<i class="icon-chevron-sign-right"></i></a></li>
                 {% endif %}
             </ul>
         </div>
