--- a/css/style.css
+++ b/css/style.css
@@ -1445,10 +1445,14 @@ body {
 a {
   border-bottom: 1px solid #4fc1e9;
   color: #4fc1e9;
-  text-decoration: none; }
+  text-decoration: none;
+  word-wrap: break-word; }
   a:hover, a:active {
     border-bottom-color: #3bafda;
     color: #1790bb; }
+
+img {
+  max-width: 100%; }
 
 header,
 section {
